# SeeNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp
seenn/: Utils.cpp  Utils.h
seenn/functions/: Function.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
seenn/layers/: Activation.cpp  Activation.h  Bias.cpp  Bias.h  Dense.cpp  Dense.h  Layer.h
seenn/nn/: SeqNet.cpp  SeqNet.h
seenn/optim/: Optimizer.h  SGD.cpp  SGD.h
